--- a/src/snippets/ui/snippetdialog.ui
+++ b/src/snippets/ui/snippetdialog.ui
@@ -12,16 +12,16 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="leftMargin">
-    <number>4</number>
+    <number>0</number>
    </property>
    <property name="topMargin">
-    <number>4</number>
+    <number>0</number>
    </property>
    <property name="rightMargin">
-    <number>4</number>
+    <number>0</number>
    </property>
    <property name="bottomMargin">
-    <number>4</number>
+    <number>0</number>
    </property>
    <item>
     <layout class="QFormLayout" name="formLayout_2">
@@ -40,9 +40,9 @@
      </item>
      <item row="0" column="1">
       <widget class="KLineEdit" name="nameEdit">
-              <property name="trapReturnKey">
-              <bool>true</bool>
-              </property>
+       <property name="trapReturnKey" stdset="0">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
     </layout>
@@ -104,7 +104,7 @@
       <item row="2" column="0">
        <widget class="QLabel" name="keyWidgetLabel">
         <property name="text">
-         <string>Sh&amp;ortcut:</string>
+         <string>Sho&amp;rtcut:</string>
         </property>
         <property name="wordWrap">
          <bool>false</bool>
@@ -115,7 +115,7 @@
        </widget>
       </item>
       <item row="2" column="1">
-       <widget class="KKeySequenceWidget" name="keyWidget" native="true">
+       <widget class="KKeySequenceWidget" name="keyWidget">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>0</horstretch>
@@ -131,9 +131,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>KKeySequenceWidget</class>
-   <extends>QWidget</extends>
-   <header>kkeysequencewidget.h</header>
+   <class>KLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>klineedit.h</header>
   </customwidget>
   <customwidget>
    <class>KComboBox</class>
@@ -141,13 +141,13 @@
    <header>kcombobox.h</header>
   </customwidget>
   <customwidget>
-   <class>KLineEdit</class>
-   <extends>QLineEdit</extends>
-   <header>klineedit.h</header>
+   <class>KKeySequenceWidget</class>
+   <extends>QWidget</extends>
+   <header>kkeysequencewidget.h</header>
   </customwidget>
   <customwidget>
    <class>KPIMTextEdit::PlainTextEditorWidget</class>
-   <extends>QTextEdit</extends>
+   <extends>QWidget</extends>
    <header>kpimtextedit/plaintexteditorwidget.h</header>
   </customwidget>
  </customwidgets>
