--- a/src/snippets/ui/snippetdialog.ui
+++ b/src/snippets/ui/snippetdialog.ui
@@ -11,16 +11,7 @@
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <property name="leftMargin">
-    <number>0</number>
-   </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
+   <property name="margin">
     <number>0</number>
    </property>
    <item>
@@ -49,17 +40,8 @@
    </item>
    <item>
     <widget class="QWidget" name="groupWidget" native="true">
-     <layout class="QGridLayout" name="gridLayout" rowstretch="0,1,0">
-      <property name="leftMargin">
-       <number>0</number>
-      </property>
-      <property name="topMargin">
-       <number>0</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
+     <layout class="QGridLayout" name="gridLayout" rowstretch="0,1,0,0">
+      <property name="margin">
        <number>0</number>
       </property>
       <item row="0" column="0">
@@ -92,7 +74,7 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="KPIMTextEdit::PlainTextEditorWidget" name="snippetText">
+       <widget class="KPIMTextEdit::PlainTextEditorWidget" name="snippetText" native="true">
         <property name="font">
          <font>
           <family>Courier</family>
@@ -101,7 +83,7 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
+      <item row="3" column="0">
        <widget class="QLabel" name="keyWidgetLabel">
         <property name="text">
          <string>Sho&amp;rtcut:</string>
@@ -114,13 +96,20 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
-       <widget class="KKeySequenceWidget" name="keyWidget">
+      <item row="3" column="1">
+       <widget class="KKeySequenceWidget" name="keyWidget" native="true">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QPushButton" name="pushButtonVariables">
+        <property name="text">
+         <string>Variables</string>
         </property>
        </widget>
       </item>
