Add spacer after button

--- a/src/snippets/ui/snippetdialog.ui
+++ b/src/snippets/ui/snippetdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>312</width>
-    <height>347</height>
+    <width>517</width>
+    <height>722</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -40,10 +40,7 @@
    </item>
    <item>
     <widget class="QWidget" name="groupWidget" native="true">
-     <layout class="QGridLayout" name="gridLayout" rowstretch="0,1,0,0">
-      <property name="margin">
-       <number>0</number>
-      </property>
+     <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0">
        <widget class="QLabel" name="textLabelGroup">
         <property name="text">
@@ -53,9 +50,6 @@
          <bool>false</bool>
         </property>
        </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="KComboBox" name="groupBox"/>
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="textLabel">
@@ -73,7 +67,7 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="1" column="1" colspan="2">
        <widget class="KPIMTextEdit::PlainTextEditorWidget" name="snippetText" native="true">
         <property name="font">
          <font>
@@ -82,6 +76,26 @@
          </font>
         </property>
        </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QPushButton" name="pushButtonVariables">
+        <property name="text">
+         <string>Variables</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>347</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
       </item>
       <item row="3" column="0">
        <widget class="QLabel" name="keyWidgetLabel">
@@ -96,7 +110,7 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="1">
+      <item row="3" column="1" colspan="2">
        <widget class="KKeySequenceWidget" name="keyWidget" native="true">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -106,12 +120,8 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
-       <widget class="QPushButton" name="pushButtonVariables">
-        <property name="text">
-         <string>Variables</string>
-        </property>
-       </widget>
+      <item row="0" column="1" colspan="2">
+       <widget class="KComboBox" name="groupBox"/>
       </item>
      </layout>
     </widget>
