--- a/src/snippets/ui/snippetdialog.ui
+++ b/src/snippets/ui/snippetdialog.ui
@@ -131,7 +131,7 @@
        </widget>
       </item>
       <item row="5" column="1" colspan="2">
-       <widget class="QLineEdit" name="lineEdit"/>
+       <widget class="QLineEdit" name="keyword"/>
       </item>
      </layout>
     </widget>
