Add subject support as discussed with David

--- a/src/snippets/ui/snippetwidget.ui
+++ b/src/snippets/ui/snippetwidget.ui
@@ -7,11 +7,20 @@
     <x>0</x>
     <y>0</y>
     <width>468</width>
-    <height>188</height>
+    <height>287</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
@@ -30,25 +39,27 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="KLineEdit" name="nameEdit">
-      </widget>
+      <widget class="KLineEdit" name="nameEdit"/>
      </item>
     </layout>
    </item>
    <item>
     <widget class="QWidget" name="groupWidget" native="true">
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0">
-       <widget class="QLabel" name="textLabelGroup">
-        <property name="text">
-         <string comment="Group to which the snippet belongs.">Group:</string>
+      <item row="3" column="2">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
         </property>
-        <property name="wordWrap">
-         <bool>false</bool>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>347</width>
+          <height>20</height>
+         </size>
         </property>
-       </widget>
+       </spacer>
       </item>
-      <item row="1" column="0">
+      <item row="2" column="0">
        <widget class="QLabel" name="textLabel">
         <property name="text">
          <string>&amp;Snippet:</string>
@@ -64,8 +75,31 @@
         </property>
        </widget>
       </item>
+      <item row="7" column="1" colspan="2">
+       <widget class="KKeySequenceWidget" name="keyWidget">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="textLabelGroup">
+        <property name="text">
+         <string comment="Group to which the snippet belongs.">Group:</string>
+        </property>
+        <property name="wordWrap">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
       <item row="1" column="1" colspan="2">
-       <widget class="KPIMTextEdit::PlainTextEditorWidget" name="snippetText" native="true">
+       <widget class="KComboBox" name="groupBox"/>
+      </item>
+      <item row="2" column="1" colspan="2">
+       <widget class="KPIMTextEdit::PlainTextEditorWidget" name="snippetText">
         <property name="font">
          <font>
           <family>Courier</family>
@@ -74,27 +108,21 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
+      <item row="6" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Keyword:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
        <widget class="QPushButton" name="pushButtonVariables">
         <property name="text">
          <string>Variables</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="2">
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>347</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="6" column="0">
+      <item row="7" column="0">
        <widget class="QLabel" name="keyWidgetLabel">
         <property name="text">
          <string>Sho&amp;rtcut:</string>
@@ -108,27 +136,37 @@
        </widget>
       </item>
       <item row="6" column="1" colspan="2">
-       <widget class="KKeySequenceWidget" name="keyWidget" native="true">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
+       <widget class="KLineEdit" name="keyword">
+        <property name="urlDropsEnabled">
+         <bool>false</bool>
+        </property>
+        <property name="trapEnterKeyEvent" stdset="0">
+         <bool>true</bool>
+        </property>
+        <property name="showClearButton" stdset="0">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Subject:</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1" colspan="2">
-       <widget class="KComboBox" name="groupBox"/>
-      </item>
-      <item row="5" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Keyword:</string>
+       <widget class="KLineEdit" name="subject">
+        <property name="clearButtonEnabled">
+         <bool>true</bool>
+        </property>
+        <property name="urlDropsEnabled">
+         <bool>false</bool>
+        </property>
+        <property name="trapEnterKeyEvent" stdset="0">
+         <bool>true</bool>
         </property>
        </widget>
-      </item>
-      <item row="5" column="1" colspan="2">
-       <widget class="KLineEdit" name="keyword"/>
       </item>
      </layout>
     </widget>
@@ -137,24 +175,24 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>KLineEdit</class>
-   <extends>QLineEdit</extends>
-   <header>klineedit.h</header>
-  </customwidget>
-  <customwidget>
    <class>KComboBox</class>
    <extends>QComboBox</extends>
    <header>kcombobox.h</header>
   </customwidget>
   <customwidget>
-   <class>KKeySequenceWidget</class>
-   <extends>QWidget</extends>
-   <header>kkeysequencewidget.h</header>
+   <class>KLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>klineedit.h</header>
   </customwidget>
   <customwidget>
    <class>KPIMTextEdit::PlainTextEditorWidget</class>
    <extends>QWidget</extends>
    <header>kpimtextedit/plaintexteditorwidget.h</header>
+  </customwidget>
+  <customwidget>
+   <class>KKeySequenceWidget</class>
+   <extends>QWidget</extends>
+   <header>kkeysequencewidget.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
