--- a/src/snippets/ui/snippetwidget.ui
+++ b/src/snippets/ui/snippetwidget.ui
@@ -184,6 +184,9 @@
       </item>
       <item row="3" column="1" colspan="2">
        <widget class="QLineEdit" name="to">
+        <property name="placeholderText">
+         <string>Separate email with a comma</string>
+        </property>
         <property name="clearButtonEnabled">
          <bool>true</bool>
         </property>
@@ -198,6 +201,9 @@
       </item>
       <item row="5" column="1" colspan="2">
        <widget class="QLineEdit" name="bcc">
+        <property name="placeholderText">
+         <string>Separate email with a comma</string>
+        </property>
         <property name="clearButtonEnabled">
          <bool>true</bool>
         </property>
@@ -205,6 +211,9 @@
       </item>
       <item row="4" column="1" colspan="2">
        <widget class="QLineEdit" name="cc">
+        <property name="placeholderText">
+         <string>Separate email with a comma</string>
+        </property>
         <property name="clearButtonEnabled">
          <bool>true</bool>
         </property>
