--- a/src/snippets/ui/snippetwidget.ui
+++ b/src/snippets/ui/snippetwidget.ui
@@ -11,16 +11,7 @@
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <property name="leftMargin">
-    <number>0</number>
-   </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
+   <property name="margin">
     <number>0</number>
    </property>
    <item>
@@ -54,7 +45,7 @@
        </widget>
       </item>
       <item row="11" column="1" colspan="2">
-       <widget class="KKeySequenceWidget" name="keyWidget">
+       <widget class="KKeySequenceWidget" name="keyWidget" native="true">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>0</horstretch>
@@ -68,7 +59,7 @@
       </item>
       <item row="10" column="1" colspan="2">
        <widget class="KLineEdit" name="keyword">
-        <property name="urlDropsEnabled">
+        <property name="urlDropsEnabled" stdset="0">
          <bool>false</bool>
         </property>
         <property name="trapEnterKeyEvent" stdset="0">
@@ -88,10 +79,10 @@
       </item>
       <item row="2" column="1" colspan="2">
        <widget class="KLineEdit" name="subject">
-        <property name="clearButtonEnabled">
+        <property name="clearButtonEnabled" stdset="0">
          <bool>true</bool>
         </property>
-        <property name="urlDropsEnabled">
+        <property name="urlDropsEnabled" stdset="0">
          <bool>false</bool>
         </property>
         <property name="trapEnterKeyEvent" stdset="0">
@@ -107,7 +98,7 @@
        </widget>
       </item>
       <item row="6" column="1" colspan="2">
-       <widget class="KPIMTextEdit::PlainTextEditorWidget" name="snippetText">
+       <widget class="KPIMTextEdit::PlainTextEditorWidget" name="snippetText" native="true">
         <property name="font">
          <font>
           <family>Courier</family>
@@ -187,7 +178,7 @@
         <property name="placeholderText">
          <string>Separate email with a comma</string>
         </property>
-        <property name="clearButtonEnabled">
+        <property name="clearButtonEnabled" stdset="0">
          <bool>true</bool>
         </property>
        </widget>
@@ -204,7 +195,7 @@
         <property name="placeholderText">
          <string>Separate email with a comma</string>
         </property>
-        <property name="clearButtonEnabled">
+        <property name="clearButtonEnabled" stdset="0">
          <bool>true</bool>
         </property>
        </widget>
@@ -214,7 +205,7 @@
         <property name="placeholderText">
          <string>Separate email with a comma</string>
         </property>
-        <property name="clearButtonEnabled">
+        <property name="clearButtonEnabled" stdset="0">
          <bool>true</bool>
         </property>
        </widget>
@@ -246,6 +237,16 @@
    <header>kkeysequencewidget.h</header>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>nameEdit</tabstop>
+  <tabstop>groupBox</tabstop>
+  <tabstop>subject</tabstop>
+  <tabstop>to</tabstop>
+  <tabstop>cc</tabstop>
+  <tabstop>bcc</tabstop>
+  <tabstop>pushButtonVariables</tabstop>
+  <tabstop>keyword</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
