--- a/src/snippets/ui/snippetwidget.ui
+++ b/src/snippets/ui/snippetwidget.ui
@@ -55,7 +55,7 @@
        </widget>
       </item>
       <item row="1" column="1" colspan="2">
-       <widget class="KComboBox" name="groupBox"/>
+       <widget class="QComboBox" name="groupBox"/>
       </item>
       <item row="10" column="1" colspan="2">
        <widget class="KLineEdit" name="keyword">
@@ -216,11 +216,6 @@
   </layout>
  </widget>
  <customwidgets>
-  <customwidget>
-   <class>KComboBox</class>
-   <extends>QComboBox</extends>
-   <header>kcombobox.h</header>
-  </customwidget>
   <customwidget>
    <class>KLineEdit</class>
    <extends>QLineEdit</extends>
