--- a/src/snippets/ui/snippetwidget.ui
+++ b/src/snippets/ui/snippetwidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>549</width>
-    <height>467</height>
+    <height>638</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -46,66 +46,23 @@
    <item>
     <widget class="QWidget" name="groupWidget" native="true">
      <layout class="QGridLayout" name="gridLayout">
-      <item row="2" column="1" colspan="2">
-       <widget class="KLineEdit" name="subject">
-        <property name="clearButtonEnabled">
-         <bool>true</bool>
-        </property>
-        <property name="urlDropsEnabled">
-         <bool>false</bool>
-        </property>
-        <property name="trapEnterKeyEvent" stdset="0">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="11" column="0">
-       <widget class="QLabel" name="label">
+      <item row="1" column="0">
+       <widget class="QLabel" name="textLabelGroup">
         <property name="text">
-         <string>Keyword:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="8" column="2">
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>347</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="label_3">
-        <property name="text">
-         <string>To:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="12" column="0">
-       <widget class="QLabel" name="keyWidgetLabel">
-        <property name="text">
-         <string>Sho&amp;rtcut:</string>
+         <string comment="Group to which the snippet belongs.">Group:</string>
         </property>
         <property name="wordWrap">
          <bool>false</bool>
         </property>
-        <property name="buddy">
-         <cstring>keyWidget</cstring>
-        </property>
        </widget>
       </item>
-      <item row="12" column="1" colspan="2">
-       <widget class="KKeySequenceWidget" name="keyWidget">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
+      <item row="1" column="1" colspan="2">
+       <widget class="QComboBox" name="groupBox"/>
+      </item>
+      <item row="9" column="0">
+       <widget class="QLabel" name="label_6">
+        <property name="text">
+         <string>Attachment:</string>
         </property>
        </widget>
       </item>
@@ -116,23 +73,6 @@
           <family>Courier</family>
           <pointsize>11</pointsize>
          </font>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1" colspan="2">
-       <widget class="QLineEdit" name="cc">
-        <property name="placeholderText">
-         <string>Separate email with a comma</string>
-        </property>
-        <property name="clearButtonEnabled">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="0">
-       <widget class="QLabel" name="label_5">
-        <property name="text">
-         <string>Bcc:</string>
         </property>
        </widget>
       </item>
@@ -152,8 +92,8 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="1" colspan="2">
-       <widget class="QLineEdit" name="to">
+      <item row="4" column="1" colspan="2">
+       <widget class="QLineEdit" name="cc">
         <property name="placeholderText">
          <string>Separate email with a comma</string>
         </property>
@@ -162,30 +102,10 @@
         </property>
        </widget>
       </item>
-      <item row="11" column="1" colspan="2">
-       <widget class="KLineEdit" name="keyword">
-        <property name="urlDropsEnabled">
-         <bool>false</bool>
-        </property>
-        <property name="trapEnterKeyEvent" stdset="0">
-         <bool>true</bool>
-        </property>
-        <property name="showClearButton" stdset="0">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="8" column="1">
-       <widget class="QPushButton" name="pushButtonVariables">
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>Variables</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="label_2">
-        <property name="text">
-         <string>Subject:</string>
+         <string>To:</string>
         </property>
        </widget>
       </item>
@@ -199,16 +119,6 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="textLabelGroup">
-        <property name="text">
-         <string comment="Group to which the snippet belongs.">Group:</string>
-        </property>
-        <property name="wordWrap">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
       <item row="4" column="0">
        <widget class="QLabel" name="label_4">
         <property name="text">
@@ -216,18 +126,108 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1" colspan="2">
-       <widget class="QComboBox" name="groupBox"/>
-      </item>
-      <item row="7" column="0">
-       <widget class="QLabel" name="label_6">
+      <item row="13" column="0">
+       <widget class="QLabel" name="label">
         <property name="text">
-         <string>Attachment:</string>
+         <string>Keyword:</string>
         </property>
        </widget>
       </item>
-      <item row="7" column="1" colspan="2">
-       <widget class="MailCommon::SnippetAttachmentWidget" name="attachment"/>
+      <item row="14" column="0">
+       <widget class="QLabel" name="keyWidgetLabel">
+        <property name="text">
+         <string>Sho&amp;rtcut:</string>
+        </property>
+        <property name="wordWrap">
+         <bool>false</bool>
+        </property>
+        <property name="buddy">
+         <cstring>keyWidget</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1" colspan="2">
+       <widget class="QLineEdit" name="to">
+        <property name="placeholderText">
+         <string>Separate email with a comma</string>
+        </property>
+        <property name="clearButtonEnabled">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1" colspan="2">
+       <widget class="KLineEdit" name="subject">
+        <property name="clearButtonEnabled">
+         <bool>true</bool>
+        </property>
+        <property name="urlDropsEnabled">
+         <bool>false</bool>
+        </property>
+        <property name="trapEnterKeyEvent" stdset="0">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="14" column="1" colspan="2">
+       <widget class="KKeySequenceWidget" name="keyWidget">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="0">
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>Bcc:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="9" column="1" colspan="2">
+       <widget class="MailCommon::SnippetAttachmentWidget" name="attachment" native="true"/>
+      </item>
+      <item row="13" column="1" colspan="2">
+       <widget class="KLineEdit" name="keyword">
+        <property name="urlDropsEnabled">
+         <bool>false</bool>
+        </property>
+        <property name="trapEnterKeyEvent" stdset="0">
+         <bool>true</bool>
+        </property>
+        <property name="showClearButton" stdset="0">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Subject:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="1">
+       <widget class="QPushButton" name="pushButtonVariables">
+        <property name="text">
+         <string>Variables</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="2">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>347</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
       </item>
      </layout>
     </widget>
@@ -241,11 +241,6 @@
    <header>klineedit.h</header>
   </customwidget>
   <customwidget>
-   <class>MailCommon::SnippetAttachmentWidget</class>
-   <extends>QWidget</extends>
-   <header>snippets/snippetattachmentwidget.h</header>
-  </customwidget>	  
-  <customwidget>
    <class>KPIMTextEdit::PlainTextEditorWidget</class>
    <extends>QWidget</extends>
    <header>kpimtextedit/plaintexteditorwidget.h</header>
@@ -255,6 +250,11 @@
    <extends>QWidget</extends>
    <header>kkeysequencewidget.h</header>
   </customwidget>
+  <customwidget>
+   <class>MailCommon::SnippetAttachmentWidget</class>
+   <extends>QWidget</extends>
+   <header>snippets/snippetattachmentwidget.h</header>
+  </customwidget>
  </customwidgets>
  <tabstops>
   <tabstop>nameEdit</tabstop>
@@ -263,7 +263,6 @@
   <tabstop>to</tabstop>
   <tabstop>cc</tabstop>
   <tabstop>bcc</tabstop>
-  <tabstop>pushButtonVariables</tabstop>
   <tabstop>keyword</tabstop>
  </tabstops>
  <resources/>
