--- a/src/snippets/ui/snippetwidget.ui
+++ b/src/snippets/ui/snippetwidget.ui
@@ -62,7 +62,7 @@
       <item row="9" column="0">
        <widget class="QLabel" name="label_6">
         <property name="text">
-         <string>Attachment:</string>
+         <string>Attachments:</string>
         </property>
        </widget>
       </item>
