--- a/src/snippets/ui/snippetwidget.ui
+++ b/src/snippets/ui/snippetwidget.ui
@@ -24,7 +24,8 @@
     <number>0</number>
    </property>
    <item>
-    <layout class="QFormLayout" name="formLayout_2">
+    <layout class="QFormLayout" name="formLayout">
+     <!-- Name -->
      <item row="0" column="0">
       <widget class="QLabel" name="nameLabel">
        <property name="text">
@@ -41,172 +42,194 @@
      <item row="0" column="1">
       <widget class="KLineEdit" name="nameEdit"/>
      </item>
+
+     <!-- Group -->
+     <item row="1" column="0">
+      <widget class="QLabel" name="textLabelGroup">
+       <property name="text">
+        <string comment="Group to which the snippet belongs.">Group:</string>
+       </property>
+       <property name="wordWrap">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QComboBox" name="groupBox">
+       <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred" />
+       </property>
+      </widget>
+     </item>
+
+     <!-- Subject -->
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Subject:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="KLineEdit" name="subject">
+       <property name="clearButtonEnabled">
+        <bool>true</bool>
+       </property>
+       <property name="trapEnterKeyEvent" stdset="0">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+
+     <!-- To -->
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>To:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="Akonadi::EmailAddressRequester" name="to">
+      </widget>
+     </item>
+
+     <!-- CC -->
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>Cc:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="Akonadi::EmailAddressRequester" name="cc">
+      </widget>
+     </item>
+
+     <!-- BCC -->
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_5">
+       <property name="text">
+        <string>Bcc:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="Akonadi::EmailAddressRequester" name="bcc">
+      </widget>
+     </item>
+
+     <!-- Snippet -->
+     <item row="6" column="0">
+      <widget class="QLabel" name="textLabel">
+       <property name="text">
+        <string>&amp;Snippet:</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignTop</set>
+       </property>
+       <property name="wordWrap">
+        <bool>false</bool>
+       </property>
+       <property name="buddy">
+        <cstring>snippetText</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1">
+      <widget class="TextCustomEditor::PlainTextEditorWidget" name="snippetText">
+       <property name="font">
+        <font>
+         <family>Courier</family>
+         <pointsize>11</pointsize>
+        </font>
+       </property>
+      </widget>
+     </item>
+
+     <!-- Variables -->
+     <item row="7" column="1">
+      <layout class="QHBoxLayout">
+       <item row="0">
+        <widget class="QPushButton" name="pushButtonVariables">
+         <property name="text">
+          <string>Variables</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1">
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>347</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </item>
+
+     <!-- Attachments -->
+     <item row="8" column="0">
+      <widget class="QLabel" name="label_6">
+       <property name="text">
+        <string>Attachments:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="1">
+      <widget class="MailCommon::SnippetAttachmentWidget" name="attachment" native="true"/>
+     </item>
+
+     <!-- Keyword -->
+     <item row="9" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Keyword:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="1">
+      <widget class="KLineEdit" name="keyword">
+       <property name="trapEnterKeyEvent" stdset="0">
+        <bool>true</bool>
+       </property>
+       <property name="showClearButton" stdset="0">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+
+     <!-- Shortcut -->
+     <item row="10" column="0">
+      <widget class="QLabel" name="keyWidgetLabel">
+       <property name="text">
+        <string>Sho&amp;rtcut:</string>
+       </property>
+       <property name="wordWrap">
+        <bool>false</bool>
+       </property>
+       <property name="buddy">
+        <cstring>keyWidget</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="10" column="1">
+      <widget class="KKeySequenceWidget" name="keyWidget">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+      </widget>
+     </item>
     </layout>
-   </item>
-   <item>
-    <widget class="QWidget" name="groupWidget" native="true">
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="1" column="0">
-       <widget class="QLabel" name="textLabelGroup">
-        <property name="text">
-         <string comment="Group to which the snippet belongs.">Group:</string>
-        </property>
-        <property name="wordWrap">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1" colspan="2">
-       <widget class="QComboBox" name="groupBox"/>
-      </item>
-      <item row="9" column="0">
-       <widget class="QLabel" name="label_6">
-        <property name="text">
-         <string>Attachments:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="1" colspan="2">
-       <widget class="TextCustomEditor::PlainTextEditorWidget" name="snippetText">
-        <property name="font">
-         <font>
-          <family>Courier</family>
-          <pointsize>11</pointsize>
-         </font>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="0">
-       <widget class="QLabel" name="textLabel">
-        <property name="text">
-         <string>&amp;Snippet:</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignTop</set>
-        </property>
-        <property name="wordWrap">
-         <bool>false</bool>
-        </property>
-        <property name="buddy">
-         <cstring>snippetText</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1" colspan="2">
-       <widget class="Akonadi::EmailAddressRequester" name="cc">
-       </widget>
-      </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="label_3">
-        <property name="text">
-         <string>To:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="1" colspan="2">
-       <widget class="Akonadi::EmailAddressRequester" name="bcc">
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="label_4">
-        <property name="text">
-         <string>Cc:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="13" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Keyword:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="14" column="0">
-       <widget class="QLabel" name="keyWidgetLabel">
-        <property name="text">
-         <string>Sho&amp;rtcut:</string>
-        </property>
-        <property name="wordWrap">
-         <bool>false</bool>
-        </property>
-        <property name="buddy">
-         <cstring>keyWidget</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1" colspan="2">
-       <widget class="Akonadi::EmailAddressRequester" name="to">
-       </widget>
-      </item>
-      <item row="2" column="1" colspan="2">
-       <widget class="KLineEdit" name="subject">
-        <property name="clearButtonEnabled">
-         <bool>true</bool>
-        </property>
-        <property name="trapEnterKeyEvent" stdset="0">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="14" column="1" colspan="2">
-       <widget class="KKeySequenceWidget" name="keyWidget">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="0">
-       <widget class="QLabel" name="label_5">
-        <property name="text">
-         <string>Bcc:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="9" column="1" colspan="2">
-       <widget class="MailCommon::SnippetAttachmentWidget" name="attachment" native="true"/>
-      </item>
-      <item row="13" column="1" colspan="2">
-       <widget class="KLineEdit" name="keyword">
-        <property name="trapEnterKeyEvent" stdset="0">
-         <bool>true</bool>
-        </property>
-        <property name="showClearButton" stdset="0">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="label_2">
-        <property name="text">
-         <string>Subject:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="1">
-       <widget class="QPushButton" name="pushButtonVariables">
-        <property name="text">
-         <string>Variables</string>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="2">
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>347</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-     </layout>
-    </widget>
    </item>
   </layout>
  </widget>
